VariableArityMethods/Code6_error_report.txt
javac errors for Code6.java 
Code6.java:4: error: generic array creation
        T[] array = new T[10];
                    ^
Note: Code6.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
 
========================= 
ExtendJ errors for Code6.java 
 
========================= 
Eclipse ECJ errors for Code6.java 
----------
1. WARNING in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\VariableArityMethods\Code6.java (at line 2)
	public void unsafeMethod(T... args) {
	                              ^^^^
Type safety: Potential heap pollution via varargs parameter args
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\VariableArityMethods\Code6.java (at line 4)
	T[] array = new T[10];
	            ^^^^^^^^^
Cannot create a generic array of T
----------
2 problems (1 error, 1 warning)
